--- a/intro.tex
+++ b/intro.tex
@@ -18,7 +18,7 @@
 % %; that is, scheduling policy is easier to express at the edge. 
 % Consider examples such as traffic between different campuses of an organization, or a large content provider (\eg Netflix) and a network with many clients (e.g., a regional ISP), or an organization using an external service (\eg Dropbox), and so on. In each of these scenarios the sender has enough information to unilaterally choose a scheduling or queue management policy for its component flows (such as prioritizing flows based on applications, enforcing fair queueing, or using AQM to bound delays). However, these policies are effective only when enforced on congested links in a flow's path that experience a queue build-up, and such links are often outside the control of the individual customers~\cite{inferring-interdomain-congestion}. 
 
-The vast literature on scheduling and queue management algorithms~\cite{diffserv, fair-queueing, sfq, pie, CoDel, fifoplus, virtualClocks, csfq, drr, red, ecn} clearly indicates the performance benefits of deploying such policies within the network. However, the Internet, at large, has been unable to enjoy these benefits for reasons discussed below. 
+The vast literature on scheduling and queue management algorithms~\cite{diffserv, fair-queueing, sfq, pie, CoDel, fifoplus, virtualClocks, csfq, drr, red, ecn} \fc{such as ...} clearly indicates the performance benefits \fc{explicitly say: fct, fairness, etc} of deploying such policies within the network. However, the Internet, at large, has been unable to enjoy these benefits for reasons discussed below. 
 
 Internet content providers (or customers) may desire specific policies for their traffic, as per their own requirements. For example, Netflix might benefit from doing fair queuing across its video traffic, and Amazon might want to prioritize its interactive web store traffic over the long-lived AWS transfers. However, such policies are effective only when enforced on bottleneck links that experience a queue build-up, and such links are often outside the control of individual customers~\cite{inferring-interdomain-congestion, isp-throttle-1, isp-throttle-2, isp-throttle-3}, rendering them incapable of applying desired policies to their traffic. 
 
