--- a/fifo-not-enough.tex
+++ b/fifo-not-enough.tex
@@ -8,3 +8,5 @@
     \caption{With FIFO scheduling, the benefits of \name are lost: FCTs are 18\% worse in the median.}
     \label{fig:eval:fifo}
 \end{figure}
+\newcommand{\overviewBenefitsFifoMedian}{1.96\xspace}
+\newcommand{\overviewBenefitsFifoWorse}{18\%\xspace}
