--- a/overview-benefits.tex
+++ b/overview-benefits.tex
@@ -8,10 +8,10 @@
     \caption{\name achieves 33\% lower median slowdown. Note the differing axis scales. For both \name and Optimal, performance benefits come from preventing short flows from queueing behind long ones.}
     \label{fig:eval:best}
 \end{figure}
-\newcommand{\overviewBenefitsBaselineMedian}{1.62}
-\newcommand{\overviewBenefitsBaselineTail}{10.77}
-\newcommand{\overviewBenefitsBundlerMedian}{1.08}
-\newcommand{\overviewBenefitsBundlerTail}{9.84}
-\newcommand{\overviewBenefitsOptimalMedian}{1.08}
-\newcommand{\overviewBenefitsOptimalTail}{4.46}
-\newcommand{\overviewBenefitsBundlerMedianImprovement}{33.25\%}
+\newcommand{\overviewBenefitsBaselineMedian}{1.62\xspace}
+\newcommand{\overviewBenefitsBaselineTail}{10.77\xspace}
+\newcommand{\overviewBenefitsBundlerMedian}{1.08\xspace}
+\newcommand{\overviewBenefitsBundlerTail}{9.84\xspace}
+\newcommand{\overviewBenefitsOptimalMedian}{1.08\xspace}
+\newcommand{\overviewBenefitsOptimalTail}{4.46\xspace}
+\newcommand{\overviewBenefitsBundlerMedianImprovement}{33\%\xspace}
