--- a/graphs/lowdelays.Rnw
+++ b/graphs/lowdelays.Rnw
@@ -1,5 +1,5 @@
-\begin{figure}
-    \centering
+%\begin{figure}
+%    \centering
 <<eval:lowdelays,fig.showtext=TRUE,cache=TRUE,echo=FALSE,message=FALSE,warning=FALSE,fig.width='\\columnwidth',fig.height=2>>=
 library(ggplot2)
 library(showtext)
@@ -8,27 +8,41 @@ showtext_auto()
 df <- read.csv("lowdelays.data", sep=" ")
 df$rtt <- (df$rtt / 1e3) - 50
 
-ggplot(df, aes(x=rtt, colour=alg)) +
-    stat_ecdf() +
-    scale_x_continuous(
-        name="Queueing Delay (ms)") +
-    coord_cartesian(xlim=c(0,200)) +
-    scale_colour_brewer(type="qual", palette=2,
-        limits=c("copa_fqcodel", "nobundler_fifo"),
-        labels=c(
-            "copa_fqcodel" = "Bundler (FQ-CoDel)", 
-            "nobundler_fifo" = "Status Quo"
-        )
-    ) +
-    ylab("CDF") +
-    theme_minimal() +
-    theme(
-        legend.position=c(0.85, 0.35),
-        legend.title=element_blank(),
-        legend.text=element_text(size=14, family="Lato", face="plain"),
-        text=element_text(size=18, family="Lato", face="bold")
-    )
+#ggplot(df, aes(x=rtt, colour=alg)) +
+#    stat_ecdf() +
+#    scale_x_continuous(
+#        name="Queueing Delay (ms)") +
+#    coord_cartesian(xlim=c(0,200)) +
+#    scale_colour_brewer(type="qual", palette=2,
+#        limits=c("copa_fqcodel", "nobundler_fifo"),
+#        labels=c(
+#            "copa_fqcodel" = "Bundler (FQ-CoDel)", 
+#            "nobundler_fifo" = "Status Quo"
+#        )
+#    ) +
+#    ylab("CDF") +
+#    theme_minimal() +
+#    theme(
+#        legend.position=c(0.85, 0.35),
+#        legend.title=element_blank(),
+#        legend.text=element_text(size=14, family="Lato", face="plain"),
+#        text=element_text(size=18, family="Lato", face="bold")
+#    )
+
+delaysBundler = quantile(df[df$alg == "copa_fqcodel",]$rtt, c(0.5, 0.99))
+delaysBaseline = quantile(df[df$alg == "nobundler_fifo",]$rtt, c(0.5, 0.99))
+delaysImprovement = 100 * (1- (delaysBundler[1] / delaysBaseline[1]))
 @
-    \caption{We configure \name with the fq-codel scheduling policy to achieve low end-to-end queueing delays.}
+%    \caption{We configure \name with the fq-codel scheduling policy to achieve low end-to-end queueing delays. \name's packet delay is \Sexpr{round(delaysImprovement, 0)}\% lower in the median.}
+%\end{figure}
+\newcommand{\delaysImprovement}{\Sexpr{round(delaysImprovement, 0)}\%\xspace}
+\begin{center}
+\begin{tabular}{c|c|c}
+Scheme     &  Median RTT                          &    $99$\%ile  RTT                      \\
+\hline
+Bundler    &  \Sexpr{round(delaysBundler[1],2)}   &    \Sexpr{round(delaysBundler[2],2)}   \\
+\baseline  &  \Sexpr{round(delaysBaseline[1],2)}  &    \Sexpr{round(delaysBaseline[2],2)}
     \label{fig:eval:lowdelays}
-\end{figure}
+\end{tabular}
+\end{center}
+
