--- a/graphs/overview-benefits.Rnw
+++ b/graphs/overview-benefits.Rnw
@@ -29,7 +29,7 @@ ggplot(small, aes(
         labels=c(
             "nobundler_fifo" = "Status Quo",
             "copa_sfq" = "Bundler", 
-            "nobundler_sfq" = "Optimal"
+            "nobundler_sfq" = "In-Network"
         ),
         scale_name=NULL, name=NULL
     ) +
@@ -53,7 +53,7 @@ ggplot(med, aes(
         labels=c(
             "nobundler_fifo" = "Status Quo",
             "copa_sfq" = "Bundler", 
-            "nobundler_sfq" = "Optimal"
+            "nobundler_sfq" = "In-Network"
         ),
         scale_name=NULL, name=NULL
     ) +
@@ -76,7 +76,7 @@ ggplot(big, aes(
         labels=c(
             "nobundler_fifo" = "Status Quo",
             "copa_sfq" = "Bundler", 
-            "nobundler_sfq" = "Optimal"
+            "nobundler_sfq" = "In-Network"
         ),
         scale_name=NULL, name=NULL
     ) +
@@ -93,7 +93,7 @@ overview_benefits_bundler_results = quantile(df[df$Alg=="copa_sfq",]$Slowdown, c
 overview_benefits_baseline_results = quantile(df[df$Alg=="nobundler_fifo",]$Slowdown, c(0.5, 0.99))
 overview_benefits_optimal_results = quantile(df[df$Alg=="nobundler_sfq",]$Slowdown, c(0.5, 0.99))
 @
-    \caption{\name achieves 33\% lower median slowdown. Note the differing axis scales. For both \name and Optimal, performance benefits come from preventing short flows from queueing behind long ones.}
+    \caption{\name achieves \Sexpr{round(100*(1-(overview_benefits_bundler_results[1] / overview_benefits_baseline_results[1])), 0)}\% lower median slowdown. Note the differing axis scales. For both \name and Optimal, performance benefits come from preventing short flows from queueing behind long ones.}
     \label{fig:eval:best}
 \end{figure}
 \newcommand{\overviewBenefitsBaselineMedian}{\Sexpr{round(overview_benefits_baseline_results[1], 2)}\xspace}
@@ -102,4 +102,4 @@ overview_benefits_optimal_results = quantile(df[df$Alg=="nobundler_sfq",]$Slowdo
 \newcommand{\overviewBenefitsBundlerTail}{\Sexpr{round(overview_benefits_bundler_results[2], 2)}\xspace}
 \newcommand{\overviewBenefitsOptimalMedian}{\Sexpr{round(overview_benefits_optimal_results[1], 2)}\xspace}
 \newcommand{\overviewBenefitsOptimalTail}{\Sexpr{round(overview_benefits_optimal_results[2], 2)}\xspace}
-\newcommand{\overviewBenefitsBundlerMedianImprovement}{\Sexpr{round(100*(1-(overview_benefits_bundler_results[1] / overview_benefits_baseline_results[1])), 2)}\%\xspace}
+\newcommand{\overviewBenefitsBundlerMedianImprovement}{\Sexpr{round(100*(1-(overview_benefits_bundler_results[1] / overview_benefits_baseline_results[1])), 0)}\%\xspace}
