--- a/graphs/strict-prio.Rnw
+++ b/graphs/strict-prio.Rnw
@@ -37,7 +37,7 @@ strictprio_nobundler <- quantile(strictprio_nobundler$Slowdown, c(0.5, 0.99))
 @
 \begin{center}
 \begin{tabular}{c|c|c}
-Scheme     &  Median                                    &  $99$\%ile                                 \\
+Scheme     &  Median Slowdown                           &  $99$\%ile Slowdown                        \\
 \hline
 Bundler    &  \Sexpr{round(strictprio_copa_prio[1],2)}  &  \Sexpr{round(strictprio_copa_prio[2],2)}  \\
 \baseline  &  \Sexpr{round(strictprio_nobundler[1],2)}  &  \Sexpr{round(strictprio_nobundler[2],2)}
