--- a/strict-prio.tex
+++ b/strict-prio.tex
@@ -1,7 +1,7 @@
 
 \begin{center}
 \begin{tabular}{c|c|c}
-Scheme     &  Median                                    &  $99$\%ile                                 \\
+Scheme     &  Median Slowdown                           &  $99$\%ile Slowdown                        \\
 \hline
 Bundler    &  1.07  &  10.52  \\
 \baseline  &  3.07  &  201.72
