Updates from ShareLaTeX

--- a/discussion.tex
+++ b/discussion.tex
@@ -5,7 +5,8 @@
 Just as users choose a congestion control algorithm as a point in the tradeoff space between aggressiveness and cooperation at the endhost, network operators deploying a \name would pick a configuration appropriate for their workload.
 
 In the case where a sending domain controls multiple bundles (to different destination domains) it could apply scheduling policies across them.
-
+\fc{We should say something somewhere about sched across bundles and in-bundle/out-of-bundle}
+ 
 \paragrapha{Bundle Initialization}\label{s:impl:discovery}
 In most cases, it is practical to statically configure a \pair, or use the DNS to globally coordinate \name coverage across IP subnets.
 It may also be possible to dynamically discover bundles. 
