--- a/intro.tex
+++ b/intro.tex
@@ -18,7 +18,7 @@
 % %; that is, scheduling policy is easier to express at the edge. 
 % Consider examples such as traffic between different campuses of an organization, or a large content provider (\eg Netflix) and a network with many clients (e.g., a regional ISP), or an organization using an external service (\eg Dropbox), and so on. In each of these scenarios the sender has enough information to unilaterally choose a scheduling or queue management policy for its component flows (such as prioritizing flows based on applications, enforcing fair queueing, or using AQM to bound delays). However, these policies are effective only when enforced on congested links in a flow's path that experience a queue build-up, and such links are often outside the control of the individual customers~\cite{inferring-interdomain-congestion}. 
 
-The vast literature on scheduling and queue management algorithms~\cite{diffserv, fair-queueing, sfq, pie, CoDel, fifoplus, virtualClocks, csfq, drr, red, ecn} \fc{such as ...} clearly indicates the performance benefits \fc{explicitly say: fct, fairness, etc} of deploying such policies within the network. However, the Internet, at large, has been unable to enjoy these benefits for reasons discussed below. 
+The vast literature on scheduling and queue management algorithms~\cite{diffserv, fair-queueing, sfq, pie, CoDel, fifoplus, virtualClocks, csfq, drr, red, ecn} clearly indicates the performance benefits of deploying such policies within the network. \radhika{a little more details} However, the Internet, at large, has been unable to enjoy these benefits for reasons discussed below. 
 
 Internet content providers (or customers) may desire specific policies for their traffic, as per their own requirements. For example, Netflix might benefit from doing fair queuing across its video traffic, and Amazon might want to prioritize its interactive web store traffic over the long-lived AWS transfers. However, such policies are effective only when enforced on bottleneck links that experience a queue build-up, and such links are often outside the control of individual customers~\cite{inferring-interdomain-congestion, isp-throttle-1, isp-throttle-2, isp-throttle-3}, rendering them incapable of applying desired policies to their traffic. 
 
@@ -26,18 +26,18 @@ Individual ISPs, on the other hand, do have control over the queued up links in 
 %, they have no way of knowing whether it was done appropriately. 
 
 %So to summarize, while customers may not have enough control over the queued-up links in the network to effectively enforce their desired policies, the ISPs may not have enough incentives or enough visibility into the traffic to do so. 
-To reduce a customer's dependence on the ISPs with respect to how its traffic is managed, this paper attempts to bring a customer's traffic under its own control by simply \emph{moving the queues built in the network to the customer's edge}. \reword{Our approach, therefore}, allows the customer to effectively enforce its desired scheduling and queue management policies across traffic that share common sender and receiver domains (as described later). The natural question that arises is, how can the queues be moved? This is the primary focus of our work. 
+To reduce a customer's dependence on the ISPs with respect to how its traffic is managed, this paper attempts to bring a customer's traffic under its own control by simply \emph{moving the queues built in the network to the customer's edge}. Our approach, therefore, allows the customer to effectively enforce its desired scheduling and queue management policies across traffic that share common sender and receiver domains (as described later). The natural question that arises is, how can the queues be moved? This is the primary focus of our work. 
 
 We observe that the \emph{component flows} of the traffic from a given sender's domain, destined for the same downstream domain are likely to share common bottlenecks within the network. Examples include traffic between a large content provider (\eg Amazon, Google, etc.) and a network with many clients (e.g. an enterprise), between two different campuses of an organization, between collaborating institutes, and so on. By (i) aggregating such component flows into a single \emph{bundle} at the sender's egress, and (ii) controlling the outgoing rate of this bundle to match its bottleneck rate in the network, we can effectively \emph{move} the queues built by the traffic in the bundle, from within the network, to the sender's egress itself. 
 %\radhika{is the last sentence too long / hard to understand? suggestions for fixing it?} 
 
-We \reword{further} note that middleboxes are now prevalent in the Internet architecture~\cite{aplomb}. They are often deployed at the egress and ingress of a network domain, to ensure traffic transits them for intrusion detection, packet inspection, filtering etc. They thus provide an effective vantage point for aggregating and managing traffic. 
+We further note that middleboxes are now prevalent in the Internet architecture~\cite{aplomb}. They are often deployed at the egress and ingress of a network domain, to ensure traffic transits them for intrusion detection, packet inspection, filtering etc. They thus provide an effective vantage point for aggregating and managing traffic. 
 
-We \reword{now} propose a new type of middlebox, called a \name, that (1) aggregates the traffic at the customer's egress into appropriate bundles, (2) does rate control for each bundle to shift the corresponding queues from within the network to itself, and (3) applies scheduling and AQM policies within each bundle as per the customer's requirements. 
+We propose a new type of middlebox, called a \name, that (1) aggregates the traffic at the customer's egress into appropriate bundles, (2) does rate control for each bundle to shift the corresponding queues from within the network to itself, and (3) applies scheduling and AQM policies within each bundle as per the customer's requirements. 
 
 %\radhika{add a few lines on \name's high level architecture.} 
-\fc{is it not bad to bring up the two-box design here if we don't justify it until later?}
- A \name is comprised of a pair of middleboxes: a \emph{\inbox} that sits at the sender's egress and a \emph{\outbox} that sits at the receiver's ingress. A \emph{bundle} is then defined as a group of flows traversing through the same \inbox and \outbox pair. The bulk of \name's functionality resides at the \inbox, which coordinates with the \outbox to measure congestion signals, such as the round-trip time, and the rate at which packets are received. These signals are used by a standard congestion control algorithm (\reword{having certain properties}, as described later) that runs at the \inbox and computes appropriate sending rates for each bundle. The sending rates are computed such that the queuing induced by the bundled traffic within the network is minimized and is incurred at the \inbox instead, while ensuring that the bottleneck link in the network remains fully utilized. 
+%\fc{is it not bad to bring up the two-box design here if we don't justify it until later?}
+ A \name is comprised of a pair of middleboxes: a \emph{\inbox} that sits at the sender's egress and a \emph{\outbox} that sits at the receiver's ingress. A \emph{bundle} is then defined as a group of flows traversing through the same \inbox and \outbox pair. The bulk of \name's functionality resides at the \inbox, which coordinates with the \outbox to measure congestion signals, such as the round-trip time, and the rate at which packets are received. These signals are used by a standard congestion control algorithm (\reword{having certain properties}, as described in \S\ref{s:design}) that runs at the \inbox and computes appropriate sending rates for each bundle. The sending rates are computed such that the queuing induced by the bundled traffic within the network is minimized and is incurred at the \inbox instead, while ensuring that the bottleneck link in the network remains fully utilized. 
  
  We introduce a novel light-weight methodology for the coordination between the \inbox and the \outbox, which does not require any per-flow state (only requiring per-bundle state), and does not require any modifications to the packets traversing the \name boxes. Furthermore, our overall approach only requires introducing the \name boxes at the customer's edge, and requires no changes to the individual end-hosts (unless needed for a specific scheduling policy \eg adding priority values to packet headers) or to the routers in the network. 
  
