--- a/strict-prio.tex
+++ b/strict-prio.tex
@@ -3,7 +3,8 @@
 \begin{tabular}{c|c|c}
 Scheme     &  Median Slowdown                           &  $99$\%ile Slowdown                        \\
 \hline
-Bundler    &  1.07  &  10.52  \\
+Bundler (Prio.)   &  1.07 &  10.52  \\
+Bundler (SFQ)     &  1.1  &  19.85  \\
 \baseline  &  3.07  &  201.72
     \label{fig:eval:strict-prio}
 \end{tabular}
