--- a/waterfall.tex
+++ b/waterfall.tex
@@ -5,6 +5,6 @@
 \includegraphics[width=\maxwidth]{figure/eval:waterfall-1} 
 
 \end{knitrout}
-    \caption{\name configured with SFQ achieves fair and rate rates for component flows.}
+    \caption{\name with SFQ achieves fair and stable rates.}
     \label{fig:eval:waterfall}
 \end{figure}
