--- a/twobundler.tex
+++ b/twobundler.tex
@@ -1,7 +1,10 @@
 \begin{figure}
     \centering
 \begin{knitrout}
-\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+
+
+{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error: Faceting variables must have at least one value}}\end{kframe}
 \includegraphics[width=\maxwidth]{figure/robust:twobundler-1} 
 
 \end{knitrout}
