--- a/eval.tex
+++ b/eval.tex
@@ -96,7 +96,7 @@ Because it controls endhost packet transmissions, fq-codel achieves \delaysImpro
 \paragrapha{Strict Prioritization}\label{s:eval:strictprio}
 Using a priority scheduler at \name can improve FCTs for a higher-priority class of traffic transitting \name over a lower-priority class. 
 \input{strict-prio}
-Furthermore, when compared to fair queueing in this scenario, prioritization achieves $47$\% lower $99$\%ile FCT for the prioritized traffic class.
+Furthermore, when compared to fair queueing in this scenario, prioritization achieves \strictPrioTailImprovementOverFq lower $99$\%ile FCT for the prioritized traffic class.
 
 \input{waterfall}
 \paragrapha{Rate Fairness and Stability}\label{s:eval:waterfall}
