--- a/strict-prio.tex
+++ b/strict-prio.tex
@@ -9,4 +9,6 @@ Bundler (SFQ)     &  1.1  &  19.85  \\
     \label{fig:eval:strict-prio}
 \end{tabular}
 \end{center}
+\newcommand{\strictPrioTailImprovementOverFq}{47\%\xspace}
+\newcommand{\strictPrioImprovement}{65\%\xspace}
 
